--- a/pyproject.toml
+++ b/pyproject.toml
@@ -140,6 +140,7 @@ exclude_lines = [
 ]
 
 [tool.ruff]
+allowed-confusables = ["σ"]
 exclude = [
     ".git",
     'node_modules',
@@ -167,7 +168,6 @@ ignore = [
     'E731', # Do not assign a lambda expression, use a def
     'E741', # Ambiguous variable name: I
     'UP035',  # Import from `collections.abc` instead: `Iterator`
-    'RUF001', # String contains ambiguous unicode character `σ` (did you mean `o`?)
     'RUF012', # Mutable class attributes should be annotated with `typing.ClassVar`
     'TID252', # Prefer absolute imports over relative imports from parent modules
 ]
