--- a/pyproject.toml
+++ b/pyproject.toml
@@ -139,14 +139,14 @@ exclude_lines = [
 ]
 
 [tool.ruff]
-allowed-confusables = ["σ"]
-exclude = [
+lint.allowed-confusables = ["σ"]
+lint.exclude = [
     ".git",
     'node_modules',
 ]
-per-file-ignores = {"__init__.py" = ["F403"]}
-select = ["B", "COM", "E", "F", "RUF", "TID", "UP", "W"]
-ignore = [
+lint.per-file-ignores = {"__init__.py" = ["F403"]}
+lint.select = ["B", "COM", "E", "F", "RUF", "TID", "UP", "W"]
+lint.ignore = [
     'B005', # Using .strip() with multi-character strings is misleading the reader
     'B006', # Do not use mutable data structures for argument defaults
     'B007', # Loop control variable not used within the loop body
@@ -160,6 +160,7 @@ ignore = [
     'B023', # Functions defined inside a loop must not use variables redefined in the loop
     'B028', # No explicit `stacklevel` keyword argument found
     'B904', # Within an except clause, raise exceptions with raise ... from err or raise ... from None to distinguish them from errors in exception handling
+    'B905', # `zip()` without an explicit `strict=` parameter
     'E401', # Multiple imports on one line
     'E402', # Module level import not at top of file
     'E701', # Multiple statements on one line (colon)
@@ -171,7 +172,7 @@ ignore = [
     'TID252', # Prefer absolute imports over relative imports from parent modules
 ]
 line-length = 165
-target-version = "py39"
+target-version = "py310"
 
 # For now enable each typed module individually.
 [[tool.mypy.overrides]]
