--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,7 +112,7 @@ filterwarnings = [
 
 [tool.coverage.run]
 source = ["src/bokeh"]
-omit = ["*/sphinxext/*", "*/tmp/tmp*.py"]
+omit = ["*/sampledata/*", "*/sphinxext/*", "*/tmp/tmp*.py"]
 
 [tool.mypy]
 python_version = "3.10"
